# metaextract

./: .gitignore  .travis.yml  MANIFEST.in  README.rst  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: ci.yaml
doc/: Makefile  make.bat
doc/source/: conf.py  index.rst
metaextract/: __init__.py  cmds.py  metaextract.py  setup.py  utils.py
metaextract/tests/: test_metaextract.py
metaextract/tests/fixtures/distutils_simple/: setup.py
metaextract/tests/fixtures/distutils_with_extension/: setup.py
metaextract/tests/fixtures/pbr_simple/: setup.cfg  setup.py
metaextract/tests/fixtures/pyproject/: README.md  pyproject.toml
metaextract/tests/fixtures/setuptools_full/: setup.py
metaextract/tests/fixtures/setuptools_simple/: setup.py
metaextract/tests/fixtures/setuptools_simple_unicode/: setup.py
metaextract/tests/fixtures/setuptools_simple_unicode_and_header/: setup.py
