[metadata]
name = testpkg
summary = summary

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    entry2 = pkg1:main

[files]
packages =
    pkg1

[build_sphinx]
all_files = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
