[build-system]
requires = ["hatchling>=0.21.0"]
build-backend = "hatchling.build"

[project]
requires-python = ">=2.6,!=3.0.*,!=3.1.*,!=3.2.*"
name = "testpkg"
version= "1.2.3"
description = "desc"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "的å", email = "author@email.com" },
]
keywords = ["test", "pkg"]
classifiers = [
  "Intended Audience :: Developers",
]
dependencies = ["foo", "bar"]

[project.optional-dependencies]
extra1 = ["ex11", "ex12"]
extra2 = ["ex21>=3.4", "ex22>=0.11.0,!=0.15.0"]

[project.scripts]
testpkgp1 = "testpkg:main"

[tool.hatch.build.targets.sdist]
[tool.hatch.build.targets.wheel]
